@@ -5,7 +5,9 @@ Pending changes in the mainline
 * Fixed the lifetime of temporary files associated with jobs that create ZIP archive/media:
   - In synchronous mode, their number could grow up to "JobsHistorySize" in Orthanc <= 1.9.2
   - In asynchronous mode, the temporary files are removed as soon as their job gets canceled
-
+* Fix regression in the handling of "DicomCheckModalityHost" configuration option
+  introduced by changeset 4182 in Orthanc 1.7.4
+  
 
 Version 1.9.2 (2021-04-22)
 ==========================
